--- a/style.css
+++ b/style.css
@@ -174,11 +174,22 @@ main {
 }
 
 .about-me p {
+    display: flex;
+    justify-content: space-between; /* Para alinhar a imagem e o texto */
+    align-items: center;
     color: #88eb9d;
     margin-top: 20px;
     font-size: 1.2em;
     margin: 0 15%;
     
+}
+.about-me img {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    text-align: center;
 }
 
 /* Seção de Projetos */
